> make 211240045 jojo Linux yangzy-ubuntulaptop 6.5.0-41-generic #41~22.04.2-Ubuntu SMP PREEMPT_DYNAMIC Mon Jun  3 11:32:55 UTC 2 x86_64 x86_64 x86_64 GNU/Linux  14:45:58 up 1 day,  1:27,  1 user,  load average: 1.47, 1.16, 1.01 a499cc2a77513e25e6332831573abeedb76e59a3